--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@ Age: 20<br>
 Gender: Robot<br>
 Major: Visual Communication Design<br>
 Favorite Airline Seat: 19C<br>
-Interesting fact: "Okole" is <strong>butt</strong> in Hawaiian yay
+Interesting fact: "Okole" is <strong>butt</strong> in Hawaiian
 
 </p>  
   </article>
