--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Welcome to my world</title>
 
+<link href="favicon.ico" rel="icon" type="image/x-icon">
 <link href="css/normalize.css" rel="stylesheet" type="text/css">
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Duru+Sans|Quicksand:300' rel='stylesheet' type='text/css'>
